@@ -46,25 +46,6 @@ valgrind-tests
 version-etc
 "
 
-unistring_modules="
-localcharset
-unictype/joiningtype-of
-libunistring
-unistr/u32-cpy-alloc
-uniconv/u8-strconv-to-locale
-unistr/u32-strlen
-uniconv/u8-strconv-from-locale
-unictype/bidiclass-of
-unictype/category-M
-unictype/category-test
-unictype/scripts
-uninorm/base
-uninorm/nfc
-uninorm/u32-normalize
-unistr/u32-to-u8
-unistr/u8-to-u32
-"
-
 # Build prerequisites
 buildreq="\
 autoconf   2.62
@@ -91,11 +72,6 @@ fi
 
 bootstrap_post_import_hook ()
 {
-  # we re-use malloc-posix from the original gnulib
-  for i in ${unistring_modules}; do
-    sed -i 's/malloc-posix//g' ${GNULIB_SRCDIR}/modules/$i
-  done
-  ${GNULIB_SRCDIR}/gnulib-tool --without-tests --libtool --macro-prefix=unistring --lgpl=3orGPLv2 --dir=. --local-dir=unistring/override --lib=libunistring --source-base=unistring --m4-base=unistring/m4 --doc-base=doc --aux-dir=build-aux --avoid=posix-malloc --import ${unistring_modules}
   git -C ${GNULIB_SRCDIR} reset --hard
   # Automake requires that ChangeLog exist.
   touch ChangeLog || return 1
