@@ -19,15 +19,7 @@ AM_CPPFLAGS += -DSRCDIR=\"$(srcdir)\"
 AM_CFLAGS = $(WARN_CFLAGS)
 AM_LDFLAGS = -no-install
 
-if !HAVE_LIBUNISTRING
-AM_CPPFLAGS += -I$(top_srcdir)/unistring/ -I$(top_builddir)/unistring/
-endif
-
 LDADD = ../lib/libidn2.la ../gl/libgnu.la $(LTLIBUNISTRING)
-
-if !HAVE_LIBUNISTRING
-LDADD += ../unistring/libunistring.la
-endif
 
 TESTS = test-punycode test-lookup test-register test-strerror test-tounicode \
   test-glibc
